--- a/src/app/Views/game/game.component.html
+++ b/src/app/Views/game/game.component.html
@@ -9,3 +9,7 @@
 <br/><br/>
 <input type="button" (click)="calcular()" value="Calcular"> &nbsp;
 <input type="button" (click)="limpiar()" value="Limpiar"> 
+
+<router-outlet></router-outlet>
+
+
