--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,4 +1,4 @@
-<main class="form-signin text-center">
+<!-- <main class="form-signin text-center">
   <form>
     <h1 class="h3 mb-3 fw-normal">Welcome</h1>
     <img class="mb-4 loginImg" src="../assets/img/loginImg.jpg" alt="">
@@ -11,16 +11,66 @@
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
-    </div>
+    </div> -->
 
 <!--     <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div> -->
-    <div class="buttonWrapper">
+<!--     <div class="buttonWrapper">
       <button class="w-100 btn btn-lg btn-primary" type="submit">Log in</button>
       <button class="w-100 btn btn-lg btn-info" type="submit">Sign in</button>
     </div>
   </form>
-</main>
+</main> -->
+
+<div id="bg"></div>
+<section class="forms-section">
+  <div class="forms">
+    <div class="form-wrapper is-active">
+      <button type="button" class="switcher switcher-login">
+        Login
+        <span class="underline"></span>
+      </button>
+      <form class="form form-login">
+        <fieldset>
+          <legend>Please, enter your email and password for login.</legend>
+          <div class="input-block">
+            <label for="login-email">E-mail</label>
+            <input id="login-email" type="email" required>
+          </div>
+          <div class="input-block">
+            <label for="login-password">Password</label>
+            <input id="login-password" type="password" required>
+          </div>
+        </fieldset>
+        <button type="submit" class="btn-login">Login</button>
+      </form>
+    </div>
+    <div class="form-wrapper">
+      <button type="button" class="switcher switcher-signup">
+        Sign Up
+        <span class="underline"></span>
+      </button>
+      <form class="form form-signup">
+        <fieldset>
+          <legend>Please, enter your email, password and password confirmation for sign up.</legend>
+          <div class="input-block">
+            <label for="signup-username">Username</label>
+            <input id="signup-email" type="text" required>
+          </div>
+          <div class="input-block">
+            <label for="signup-email">E-mail</label>
+            <input id="signup-email" type="email" required>
+          </div>
+          <div class="input-block">
+            <label for="signup-password">Password</label>
+            <input id="signup-password" type="password" required>
+          </div>
+        </fieldset>
+        <button type="submit" class="btn-signup">Sign Up</button>
+      </form>
+    </div>
+  </div>
+</section>
