--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -58,10 +58,6 @@
 	box-sizing: border-box;
 }
 
-body {
-	margin: 0;
-	font-family: Roboto, -apple-system, 'Helvetica Neue', 'Segoe UI', Arial, sans-serif;
-}
 
 .forms-section {
 	display: flex;
@@ -176,7 +172,7 @@ body {
 	min-width: 260px;
 	margin-top: 50px;
 	padding: 30px 25px;
-  border-radius: 5px;
+/*   border-radius: 5px; */
 	transform-origin: top;
 }
 
@@ -303,7 +299,7 @@ body {
 	color: #3b4465;
   background: var(--grey);
   border: 1px solid #cddbef;
-  border-radius: 2px;
+/*   border-radius: 2px; */
 }
 
 .form [type='submit'] {
@@ -313,7 +309,7 @@ body {
 	margin: 30px auto 10px;
 	font-size: 18px;
 	line-height: 40px;
-	border-radius: 25px;
+/* 	border-radius: 25px; */
 	border: none;
 	transition: all .3s ease-out;
 }
