--- a/src/app/Views/home/home.component.html
+++ b/src/app/Views/home/home.component.html
@@ -1,3 +1,6 @@
-<p>home works!</p>
+<div id="bg">
+    <img src="../../../assets/img/Home/home-img-2.png" alt="" class="bg-img">
+</div>
+<h1>Welcome</h1>
 
 
