--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -34,6 +34,7 @@
         <span class="underline"></span>
       </button>
       <form class="form form-login">
+        <img src="../../../assets/img/loginImg.jpg" alt="" class="header-form">
         <fieldset>
           <legend>Please, enter your email and password for login.</legend>
           <div class="input-block">
@@ -54,6 +55,7 @@
         <span class="underline"></span>
       </button>
       <form class="form form-signup">
+        <img src="../../../assets/img/signupImg.jpg" alt="" class="header-form">
         <fieldset>
           <legend>Please, enter your email, password and password confirmation for sign up.</legend>
           <div class="input-block">
