--- a/src/app/Components/nav/nav.component.css
+++ b/src/app/Components/nav/nav.component.css
@@ -19,6 +19,13 @@
 
   .navbar{
     padding: 0.5rem 0.5rem!important;
+    background-color: var(--black)!important;
+/*     border-bottom: var(--grey) 1px solid; */
+    filter: drop-shadow(0 0 0.5rem var(--black));
+  }
+
+  .navbar .nav-link{
+    color: var(--grey);
   }
 
 /*   .navbar-dark{
