--- a/src/app/Views/about/about.component.css
+++ b/src/app/Views/about/about.component.css
@@ -18,9 +18,38 @@
     height: 180px;
     overflow: hidden;
     border-radius: 100px;
+    box-shadow: var(--black) 4px 4px 0 0;
   }
 
   .avatar{
     width: 100%;
     height: 100%;
   }
+
+  #bg{
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--dark);
+    z-index: -100;
+  }
+
+h2, p{
+    color: var(--white)!important;
+  }
+
+.btn{
+    background-color: transparent!important;
+    margin-top: 5px;
+    border: 1px solid var(--peach);
+    color: var(--peach);
+}
+
+.btn:hover {
+    background-color: var(--peach)!important;
+    color: var(--dark);
+}
+
+
