--- a/src/app/Views/about/about.component.html
+++ b/src/app/Views/about/about.component.html
@@ -7,6 +7,11 @@
 
         <h2 class="reset">Yanina Perez</h2>
         <p class="reset">LAB IV 4B 2022 2do Cuatrimestre</p>
-        <p class="reset"><a class="btn btn-secondary" href="https://github.com/Syridiana" target="_blank">Github &raquo;</a></p>
+        <div class="wrapper">
+            <p class="reset"><a class="btn btn-secondary" href="https://github.com/Syridiana" target="_blank">Github
+                    &raquo;</a></p>
+            <p class="reset"><a class="btn btn-secondary" routerLink="../games/my-game">Mi juego
+                    &raquo;</a></p>
+        </div>
     </div>
 </div>
