--- a/src/app/Views/games/game.component.html
+++ b/src/app/Views/games/game.component.html
@@ -1,4 +1,4 @@
-<label for="">Edad Uno</label>&nbsp;
+<!-- <label for="">Edad Uno</label>&nbsp;
 <input type="number" [(ngModel)]="edadUno">
 <br/><br/>
 <label for="">Edad Dos</label>&nbsp;
@@ -9,7 +9,7 @@
 <br/><br/>
 <input type="button" (click)="calcular()" value="Calcular"> &nbsp;
 <input type="button" (click)="limpiar()" value="Limpiar"> 
-
+ -->
 <router-outlet></router-outlet>
 
 
