--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" routerLink="login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="game">Juegos</a>
+          <a class="nav-link" aria-current="page" routerLink="games">Juegos</a>
         </li>
 
         <!--           <li class="nav-item">
