--- a/src/app/Components/nav/nav.component.css
+++ b/src/app/Components/nav/nav.component.css
@@ -7,11 +7,8 @@
     user-select: none;
   }
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
+
+
 
   .nav-link{
     padding: 0.5rem 1rem!important;
@@ -20,9 +17,11 @@
   .navbar{
     padding: 0.5rem 0.5rem!important;
     background-color: var(--black)!important;
-/*     border-bottom: var(--grey) 1px solid; */
     filter: drop-shadow(0 0 0.5rem var(--black));
+    margin-bottom: 0!important;
   }
+
+
 
   .navbar .nav-link{
     color: var(--grey);
@@ -35,3 +34,56 @@
   .nav-link, .navbar-brand {
     color: var(--black)!important;
   } */
+
+  .navbar-expand-md .navbar-nav{
+    flex-direction: column!important;
+  }
+
+  .mb-2{
+    margin-bottom: 0!important;
+  }
+
+  .navbar-nav .nav-item {
+    display: none;
+  }
+
+  .burger{
+    display: block!important;
+    width: 50px;
+    height: auto;
+    top: 10px;
+    cursor: pointer;
+  }
+
+
+
+  
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+
+    .navbar-nav .nav-item {
+      display: block;
+    }
+
+    .burger{
+      display: none!important;
+    }
+
+    .navbar-expand-md .navbar-nav{
+      flex-direction: row!important;
+    }
+
+    .navbar{
+      padding: 0.5rem 0.5rem!important;
+      background-color: var(--black)!important;
+  /*     border-bottom: var(--grey) 1px solid; */
+      filter: drop-shadow(0 0 0.5rem var(--black));
+      margin-bottom: 1.5rem!important;
+    }
+
+    .collapse-item{
+      display: block!important;
+    }
+  }
