--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -10,6 +10,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 .section-title {
@@ -72,8 +74,6 @@
 	position: relative;
 	cursor: pointer;
 	display: block;
-	margin-right: auto;
-	margin-left: auto;
 	padding: 0;
 	text-transform: uppercase;
 	font-family: inherit;
@@ -83,29 +83,42 @@
 	background-color: transparent;
 	border: none;
 	outline: none;
-	transform: translateX(0);
 	transition: all .3s ease-out;
-  font-weight: 600;
+  	font-weight: 600;
+	width: 100%;
+	text-align: center;
+}
+
+.switcher-login{
+	transform: translateX(20%);
+	z-index: 10;
+}
+
+.switcher-signup{
+	transform: translateX(-20%);
+	z-index: 10;
 }
 
 .form-wrapper.is-active .switcher-login {
 	color: var(--white);
-	transform: translateX(132px);
+	transform: translateX(50%);
+	z-index: 1;
 }
 
 .form-wrapper.is-active .switcher-signup {
 	color: var(--white);
-	transform: translateX(-132px);
+	transform: translateX(-50%);
+	z-index: 1;
 }
 
 .underline {
 	position: absolute;
 	bottom: -5px;
-	left: 0;
 	overflow: hidden;
 	pointer-events: none;
-	width: 100%;
+	width: 40%;
 	height: 2px;
+	left: 30%;
 }
 
 .underline::before {
@@ -120,26 +133,59 @@
 	transition: transform .2s ease-out;
 }
 
-.switcher-login .underline::before {
-	transform: translateX(101%);
+.switcher-signup .underline::before{
+	transform: translateX(200%);
 }
 
-.switcher-signup .underline::before {
-	transform: translateX(-101%);
+.switcher-login .underline::before {
+	transform: translateX(-200%);
 }
+
 
 .form-wrapper.is-active .underline::before {
 	transform: translateX(0);
 }
 
-.form {
+
+
+
+
+
+/* .form-login{
 	overflow: hidden;
 	min-width: 260px;
 	margin-top: 50px;
 	padding: 30px 25px;
-  max-width: 263px; 
+    max-width: 263px; 
 	transform-origin: top;
-  border-radius: 30px;
+    border-radius: 30px;
+}
+
+.form-signup{
+	overflow: hidden;
+	min-width: 520px;
+	margin-top: 50px;
+	padding: 30px 25px;
+    max-width: 500px; 
+	transform-origin: top;
+    border-radius: 30px;
+} */
+
+.form {
+	overflow: hidden;
+	min-width: 500px;
+	margin-top: 50px;
+	padding: 30px 25px;
+    max-width: 520px; 
+	transform-origin: top;
+    border-radius: 30px;
+}
+
+.wrapper{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
 }
 
 .form-login {
@@ -182,7 +228,7 @@
 	}
 	100% {
 		background: var(--primary-dark);
-		transform: translate(45%, -5px) scaleY(1.22);
+		transform: translate(47%, -5px) scaleY(0.93);
 	}
 }
 
@@ -218,7 +264,7 @@
 	}
 	100% {
 		background: var(--primary-dark);
-		transform: translate(-45%, 0px) scaleY(.81);
+		transform: translate(-47%, 0px) scaleY(1.07);
 	}
 }
 
@@ -288,6 +334,24 @@
 	transition: all .3s ease-out;
 }
 
+.form [type='button'] {
+	display: block;
+	min-width: 120px;
+	margin: 30px auto 10px;
+	font-size: 18px;
+	line-height: 40px;
+/* 	border-radius: 25px; */
+	border: none;
+	transition: all .3s ease-out;
+}
+
+.btn-auto{
+		color: var(--white);
+		background: var(--primary-dark);
+		transform: translateX(-30%);
+		padding: 0 10px;
+}
+
 .form-wrapper.is-active .form [type='submit'] {
 	opacity: 1;
 	transform: translateX(0);
@@ -300,10 +364,32 @@
 	transform: translateX(-30%);
 }
 
+
 .btn-signup {
 	color: var(--white);
 	background: var(--primary-dark);
 	transform: translateX(30%);
+}
+
+.btn-signup:disabled {
+	color: var(--white);
+	background: var(--primary-dark-disabled);
+	transform: translateX(30%);
+}
+
+.btn-signup:disabled:hover {
+	color: var(--white);
+	background: var(--primary-dark-disabled);
+	transform: translateX(30%);
+	box-shadow: inset 0 0 0 0px var(--primary-dark);
+}
+
+
+
+
+.button-wrapper {
+	display: flex;
+	flex-direction: row;
 }
 
 
@@ -314,6 +400,14 @@
 	transform: translateX(-30%);
   transition: .5s ease;
 }
+
+.btn-auto:hover {
+	color: var(--primary-dark);
+	  box-shadow: inset 0 0 0 1px var(--primary-dark);
+	  background: var(--white);
+	  transform: translateX(-30%);
+	transition: .5s ease;
+  }
 
 .btn-signup:hover {
 	color: var(--primary-dark);
@@ -339,3 +433,148 @@
   margin-top: -30px;
   margin-bottom: 20px;
 }
+
+
+@media (max-width: 560px) {
+
+	.form-wrapper {
+		width: 80vw;
+	}
+	.form {
+		min-width: 10vw;
+	}
+	
+	.wrapper{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+
+
+	.switcher-login{
+		text-align: center;
+		padding-right: 50px;
+	}
+	
+	.switcher-signup{
+		text-align: center;
+		padding-left: 10px;
+	}
+	
+	.form-wrapper.is-active .switcher-login {
+		color: var(--white);
+		text-align: center;
+	/* 	transform: translateX(0%); */
+	}
+	
+	.form-wrapper.is-active .switcher-signup {
+		color: var(--white);
+		text-align: center;
+		/* transform: translateX(-20%); */
+	}
+
+	.underline {
+		display: none;
+	}
+	
+	.underline::before {
+		display: none;
+	}
+	
+	.switcher-signup .underline::before{
+		display: none;
+	}
+	
+	.forms-section {
+		overflow: auto;
+	}
+	
+
+	
+	@keyframes hideLogin {
+		0% {
+			background-color: var(--white);
+			transform: translate(35%, -20px);
+		}
+		50% {
+			transform: translate(0, 0);
+		}
+		100% {
+			background: transparent;
+			transform: translate(47%, -5px) scaleY(0.93);
+		}
+	}
+
+
+	
+	@keyframes hideSignup {
+		0% {
+			background-color: var(--white);
+			transform: translate(-35%, -20px) scaleY(1);
+		}
+		50% {
+			transform: translate(0, 0) scaleY(.8);
+		}
+		100% {
+			background: transparent;
+			transform: translate(-47%, 0px) scaleY(1.07);
+		}
+	}
+	
+
+
+
+
+	@keyframes showLogin {
+		0% {
+			background: transparent;
+			transform: translate(40%, 10px);
+		}
+		50% {
+			transform: translate(0, 0);
+		}
+		100% {
+			background-color: var(--white);
+			transform: translate(50%, -20px);
+		}
+	}
+	
+
+	@keyframes showSignup {
+		0% {
+			background: transparent;
+			transform: translate(-40%, 10px) scaleY(.8);
+		}
+		50% {
+			transform: translate(0, 0) scaleY(.8);
+		}
+		100% {
+			background-color: var(--white);
+			transform: translate(-50%, -20px) scaleY(1);
+		}
+	}
+
+	.forms-section{
+		background-color: var(--accent);
+		width: 100%;
+	}
+
+
+	.btn-auto{
+		color: var(--white);
+		background: var(--primary-dark);
+		transform: translateX(0%);
+		padding: 0 10px;
+		}
+
+
+
+
+  }
+
+
+
+  .form-small-text{
+	font-size: 0.7em;
+  }
