--- a/src/app/Components/shared/nav/nav.component.html
+++ b/src/app/Components/shared/nav/nav.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" routerLink="about" (click)="closeMenu()">Quien soy</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="login" (click)="closeMenu()">Login</a>
+          <a class="nav-link" routerLink="login" (click)="closeMenu()">Login / Sign Up</a>
         </li>
         <li class="nav-item collapse-item">
           <a class="nav-link" aria-current="page" routerLink="games" (click)="closeMenu()">Juegos</a>
