--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -435,6 +435,10 @@
 }
 
 
+.form-small-text{
+	font-size: 0.7em;
+  }
+
 @media (max-width: 560px) {
 
 	.form-wrapper {
@@ -569,12 +573,15 @@
 		}
 
 
+		.btn-auto:hover {
+			color: var(--primary-dark);
+			  box-shadow: inset 0 0 0 1px var(--primary-dark);
+			  background: var(--white);
+			  transform: translateX(0%);
+			transition: .5s ease;
+		  }
 
 
   }
 
 
-
-  .form-small-text{
-	font-size: 0.7em;
-  }
