--- a/src/app/Views/home/home.component.html
+++ b/src/app/Views/home/home.component.html
@@ -1,6 +1,16 @@
 <div id="bg">
     <img src="../../../assets/img/Home/home-img-2.png" alt="" class="bg-img">
 </div>
-<h1>Welcome</h1>
 
+
+<div class="menu">
+    <ul>
+      <li>
+        <a routerLink="about">Quien soy</a>
+      </li>
+      <li>
+        <a routerLink="games">Juegos</a>
+      </li>
+    </ul>
+</div>
 
