--- a/src/app/Components/shared/nav/nav.component.html
+++ b/src/app/Components/shared/nav/nav.component.html
@@ -17,10 +17,17 @@
           <a class="nav-link" routerLink="about" (click)="closeMenu()">Quien soy</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="login" (click)="closeMenu()">Login / Sign Up</a>
+          <a class="nav-link" routerLink="login" *ngIf="!currentUserEmail" (click)="closeMenu()">Login / Sign Up</a>
+        </li>
+        <li class="nav-item collapse-item">
+          <a class="nav-link" routerLink="login" *ngIf="currentUserEmail" (click)="SignOut()">Logout</a>
         </li>
         <li class="nav-item collapse-item">
           <a class="nav-link" aria-current="page" routerLink="games" (click)="closeMenu()">Juegos</a>
+        </li>
+
+        <li class="nav-item collapse-item">
+          <a class="nav-link" aria-current="page" *ngIf="currentUserEmail" disabled>Nombre usuario: {{ userName }}</a>
         </li>
 
 
