--- a/src/app/Views/home/home.component.css
+++ b/src/app/Views/home/home.component.css
@@ -11,6 +11,7 @@
     background-color: var(--sky);
     background: rgb(0,0,50);
     background: linear-gradient(180deg, rgba(0,0,50,1) 29%, rgba(117,0,181,1) 100%);
+    z-index: -10;
 }
 
 .bg-img {
@@ -23,4 +24,31 @@ h1 {
     position: absolute;
     top: 50%;
     left: 10%;
+}
+
+.menu ul{
+    color: #fff;
+    z-index: 10;
+    position: absolute;
+    top: 30%;
+    display: flex;
+    width: 50%;
+    left: 0;
+    height: 30%;
+    flex-direction: column;
+    justify-content: space-around;
+
+    list-style-type: none;
+    padding-left: 10%;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    color: var(--white);
+    text-transform: uppercase;
+    font-size: 2em;
+}
+
+.menu ul li a:hover{
+    color: var(--accent);
 }
