--- a/src/app/Views/games/game.component.html
+++ b/src/app/Views/games/game.component.html
@@ -10,6 +10,15 @@
 <input type="button" (click)="calcular()" value="Calcular"> &nbsp;
 <input type="button" (click)="limpiar()" value="Limpiar"> 
  -->
-<router-outlet></router-outlet>
+
+
+<li>
+    <a class="link" routerLink="hangman">Ahorcado</a>
+</li>
+<li>
+    <a class="link" routerLink="greater-or-less">Mayor o menor</a>
+</li>
+
+<!--   <router-outlet></router-outlet> -->
 
 
