--- a/src/app/Components/shared/nav/nav.component.html
+++ b/src/app/Components/shared/nav/nav.component.html
@@ -1,35 +1,28 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 fixed-top">
   <div class="container-fluid">
-    <!--     <a class="navbar-brand" routerLink="">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
     <div class="navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item burger">
-          <img src="../../../assets/img/general/burger.svg" class="nav-link burger" (click)="openMenu()"/>
+          <img src="../../../assets/img/general/burger.svg" *ngIf="burger" class="nav-link burger" (click)="openMenu()" />
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="" (click)="closeMenu()">Home</a>
+          <a class="nav-link" routerLink="" *ngIf="!mobile" (click)="closeMenu()">Home</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="about" (click)="closeMenu()">Quien soy</a>
+          <a class="nav-link" routerLink="about" *ngIf="!mobile" (click)="closeMenu()">Quien soy</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="login" *ngIf="!currentUserEmail" (click)="closeMenu()">Login / Sign Up</a>
+          <a class="nav-link" routerLink="login" *ngIf="!currentUserEmail && !mobile" (click)="closeMenu()">Login / Sign Up</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" routerLink="login" *ngIf="currentUserEmail" (click)="SignOut()">Logout</a>
+          <a class="nav-link" routerLink="login" *ngIf="currentUserEmail && !mobile" (click)="SignOut()">Logout</a>
         </li>
         <li class="nav-item collapse-item">
-          <a class="nav-link" aria-current="page" routerLink="games" (click)="closeMenu()">Juegos</a>
+          <a class="nav-link" aria-current="page" *ngIf="!mobile" routerLink="games" (click)="closeMenu()">Juegos</a>
         </li>
-
         <li class="nav-item collapse-item">
-          <a class="nav-link" aria-current="page" *ngIf="currentUserEmail" disabled>Nombre usuario: {{ userName }}</a>
+          <a class="nav-link" aria-current="page" *ngIf="currentUserEmail && !mobile" disabled>Nombre usuario: {{ userName }}</a>
         </li>
-
 
         <!--           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
