--- a/src/app/Components/shared/nav/nav.component.html
+++ b/src/app/Components/shared/nav/nav.component.html
@@ -23,6 +23,9 @@
         <li class="nav-item collapse-item">
           <a class="nav-link" aria-current="page" *ngIf="currentUserEmail && !mobile" disabled>Nombre usuario: {{ userName }}</a>
         </li>
+        <li class="nav-item collapse-item">
+          <a class="nav-link" aria-current="page" *ngIf="currentUserEmail  && !mobile" routerLink="chat" (click)="closeMenu()">Chat</a>
+        </li>
 
         <!--           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
