--- a/src/app/Views/about/about.component.html
+++ b/src/app/Views/about/about.component.html
@@ -10,8 +10,10 @@
         <div class="wrapper">
             <p class="reset"><a class="btn btn-secondary" href="https://github.com/Syridiana" target="_blank">Github
                     &raquo;</a></p>
-            <p class="reset"><a class="btn btn-secondary" routerLink="../games/my-game">Mi juego
+            <p class="reset"><a class="btn btn-secondary" routerLink="../games/my-game">Mi juego - Puzzle
                     &raquo;</a></p>
         </div>
+        <h2 class="reset">Mi juego - Puzzle</h2>
+        <p class="reset">Instrucciones: Ordená correctamente las piezas para armar la imagen de ejemplo que se muestra.</p>
     </div>
 </div>
