--- a/src/app/Views/games/game.component.html
+++ b/src/app/Views/games/game.component.html
@@ -18,6 +18,12 @@
     <li>
         <a class="link" routerLink="greater-or-less">Mayor o menor</a>
     </li>
+    <li>
+        <a class="link" routerLink="trivia">Preguntados</a>
+    </li>
+    <li>
+        <a class="link" routerLink="my-game">Mi juego</a>
+    </li>
 </div>
 
 <div class="container" *ngIf="!currentUser">
