--- a/src/app/Components/chat/chat.component.html
+++ b/src/app/Components/chat/chat.component.html
@@ -46,7 +46,8 @@
     </div>
 </div>
 </div> -->
-
+<div id="bg">
+</div>
 <div class="container-fluid h-100">
     <div class="row justify-content-center h-100">
         <!--         <div class="col-md-4 col-xl-3 chat"><div class="card mb-sm-3 mb-md-0 contacts_card">
@@ -124,7 +125,7 @@
             </div>
             <div class="card-footer"></div>
         </div></div> -->
-        <div class="col-md-8 col-xl-6 chat">
+        <div class="col-xl chat">
             <div class="card">
                 <div class="card-header msg_head">
                     <div class="d-flex bd-highlight">
@@ -134,8 +135,7 @@
                             <span class="online_icon"></span>
                         </div>
                         <div class="user_info">
-                            <span>Chat with Khalid</span>
-                            <p>1767 Messages</p>
+                            <span>Bienvenido al chat</span>
                         </div>
                         <div class="video_cam">
                             <span><i class="fas fa-video"></i></span>
