--- a/src/app/Components/shared/nav/nav.component.html
+++ b/src/app/Components/shared/nav/nav.component.html
@@ -21,6 +21,9 @@
           <a class="nav-link" aria-current="page" *ngIf="!mobile" routerLink="games" (click)="closeMenu()">Juegos</a>
         </li>
         <li class="nav-item collapse-item">
+          <a class="nav-link" aria-current="page" *ngIf="currentUserEmail  && !mobile" routerLink="scores" (click)="closeMenu()">Scores</a>
+        </li>
+        <li class="nav-item collapse-item">
           <a class="nav-link" aria-current="page" *ngIf="currentUserEmail && !mobile" disabled>Nombre usuario: {{ userName }}</a>
         </li>
         <li class="nav-item collapse-item">
