--- a/src/app/Views/games/greater-or-less/greater-or-less.component.html
+++ b/src/app/Views/games/greater-or-less/greater-or-less.component.html
@@ -19,6 +19,7 @@
         <button class="btn btn-lg btn-danger" (click)=elegirProximaCarta() (click)=elegirValor(1)>Mayor</button>
         <button class="btn btn-lg btn-success" (click)=elegirProximaCarta()
             (click)=elegirValor(0)>Menor</button><br><br>
+            <button class="btn btn-lg btn-success" (click)="retirarse()">Retirarse</button><br><br>
     </div>
     <h2>Contador victorias: {{contadorVictorias}}</h2>
 </div>
